CCD-5849: fix build failures