@@ -1,5 +1,10 @@
 package uk.gov.hmcts.ccd.definition.store.elastic.mapping;
 
+import com.google.gson.stream.JsonWriter;
+import lombok.extern.slf4j.Slf4j;
+import org.jooq.lambda.Unchecked;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
 import uk.gov.hmcts.ccd.definition.store.elastic.config.CcdElasticSearchProperties;
 import uk.gov.hmcts.ccd.definition.store.elastic.mapping.type.TypeMappingGenerator;
 import uk.gov.hmcts.ccd.definition.store.repository.entity.CaseFieldEntity;
@@ -10,11 +15,7 @@ import java.io.IOException;
 import java.util.List;
 import java.util.function.Function;
 
-import com.google.gson.stream.JsonWriter;
-import lombok.extern.slf4j.Slf4j;
-import org.jooq.lambda.Unchecked;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
+import static java.util.stream.Collectors.toList;
 
 @Component
 @Slf4j
@@ -47,6 +48,7 @@ public class CaseMappingGenerator extends MappingGenerator {
         return mapping;
     }
 
+
     private void propertiesMapping(JsonWriter jw) {
         log.info("generating case properties mapping");
         config.getCasePredefinedMappings().forEach(Unchecked.biConsumer((property, mapping) -> {
@@ -76,7 +78,7 @@ public class CaseMappingGenerator extends MappingGenerator {
         jw.name(PROPERTIES);
         jw.beginObject();
         List<CaseFieldEntity> fields = caseType.getCaseFields().stream()
-            .filter(field -> !shouldIgnore(field)).toList();
+            .filter(field -> !shouldIgnore(field)).collect(toList());
         for (CaseFieldEntity field : fields) {
             String property = field.getReference();
             TypeMappingGenerator typeMapper = getTypeMapper(field.getBaseTypeString());
